Add Graphical User Interface